<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">go4lunch_Randa</string>

    <string name="error_unknown_error">An unknown error has occurred</string>
    <string name="delete_account">DELETE ACCOUNT</string>
    <string name="error_authentication_canceled">authentication canceled</string>
    <string name="toolbar_title_login_activity" translatable="false">Login</string>
    <string name="connectWithSuccess">Connected</string>
    <string name="title_map">Map View</string>
    <string name="title_list">List View</string>
    <string name="title_workmate">Workmates</string>
    <string name="activity_main_menu_search">Search</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="menu_logout">LOGOUT</string>
    <string name="menu_settings">SETTINGS</string>
    <string name="menu_lunch">YOUR LUNCH</string>
    <string name="email_not_found">Email not found</string>
    <string name="username_not_found">Username not found</string>
    <string name="simple_app_name" translatable="false">Go4Lunch</string>
    <string name="lunch">lunch with workmates</string>
    <string name="Avatar" translatable="false">avatar</string>
    <string name="notification_text" translatable="false">Notifications</string>
    <string name="save_text">Save</string>
    <string name="save_ok">Settings Saved</string>
    <string name="type" translatable="false">restaurant</string>
    <string name="floating_button" translatable="false">floating button</string>
    <string name="no_restaurant">No restaurants found</string>
    <string name="name_restaurant" translatable="false">NAME_RESTAURANT</string>
    <string name="unit_distance" translatable="false">%1$sm</string>
    <string name="restaurant_mates_number" translatable="false">(%1$d)</string>
    <string name="restaurant_closed">Closed</string>
    <string name="restaurant_opening_not_know">Opening hours are not known</string>
    <string name="closing_soon">Closing soon (%1$s)</string>
    <string name="open_until">Open until %1$s</string>
    <string name="address">ADDRESS</string>
    <string name="distance" translatable="false">DISTANCE</string>
    <string name="opening_time" translatable="false">OPENING_TIME</string>
    <string name="Titre_Toolbar_hungry">I\'m Hungry</string>
    <string name="Titre_Toolbar_workmates">Available workmates</string>
    <string name="no_restaurant_found">No restautant found</string>
    <string name="settings_notification">Notifications</string>
    <string name="settings_saved">Save</string>
    <string name="settings_toolbar">Settings</string>
    <string name="call">CALL</string>
    <string name="like" translatable="false">LIKE</string>
    <string name="user_image">user_image</string>
    <string name="likE" translatable="false">LIKE</string>
    <string name="website">WEBSITE</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="unlike" translatable="false">UNLIKE</string>
    <string name="no_phone">No phone number</string>
    <string name="restaurant_error">Unable to retrieve information</string>
    <string name="rest_like" translatable="false">LIKED</string>
    <string name="rest_dislike" translatable="false">DISLIKED</string>
    <string name="Image_restaurant">Image of restaurant selected</string>
    <string name="cancel_booking">You cancelled the booking for this place</string>
    <string name="modify_booking">You have chosen a new place for lunch</string>
    <string name="new_booking">You have chosen this place for lunch</string>
    <string name="eating_at">%1$s is eating at %2$s</string>
    <string name="hasnt_decided">%1$s hasn\'t decided yet</string>
    <string name="no_website">No Website available</string>
    <string name="restaurant_recyclerview">%1$s is joining !</string>
    <string name="no_restaurant_booked">No lunch today ?</string>
    <string name="notification_no_workmates">None.</string>
    <string name="notification" translatable="false">Go4Lunch</string>
    <string name="searching">Loading…</string>
    <string name="logo" translatable="false">logo</string>
    <string name="logo_user">logo of user</string>
    <string name="photo_restaurant_item">miniature of restaurant</string>
    <string name="error_no_internet">No internet ?</string>
    <string name="number_workmates" translatable="false">(%1$s)</string>
    <string name="search_hint">Search</string>
    <string name="search_too_short">3 characters minimum</string>
    <string name="notif1">Your lunch today :</string>
    <string name="notif2">Workmates participating :</string>
    <string name="popup_message_confirmation_delete_account">Are you sure you want to delete your account ?</string>
    //POPUP PERMISSION
    <string name="popup_message_choice_yes">Yes</string>
    <string name="popup_message_choice_no">No</string>
    // FACEBOOK ID
    <string name="facebook_application_id" translatable="false">1411191539321046</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1411191539321046</string>
</resources>