<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_map">


    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.go4lunch_randa.ui.map.Map_Fragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_list"
        android:name="com.example.go4lunch_randa.ui.restaurants_list.RestaurantsList_Fragment"
        android:label="@string/title_list"
        tools:layout="@layout/fragment_restaurants_list" />

    <fragment
        android:id="@+id/navigation_workmates"
        android:name="com.example.go4lunch_randa.ui.workmates_list.Workmates_Fragment"
        android:label="@string/title_workmate"
        tools:layout="@layout/fragment_workmates_list" />


</navigation>